Added double increment feature

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
 
-    <h1>Count=</h1><h1 id="count">0</h1>
+    <h1>Count =</h1><h1 id="count">0</h1>
+      <button id="dblincrease">++</button>
     <button id="increase">+</button>
     <button id="decrease">-</button>
+     <button id="dbldecrease">--</button>
     <button id="reset">reset</button>
     
 
